# routes/index.js
@@ -5,6 +5,19 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 
 // Include the e_card routes
-router.use('/e_cards', require('./e_cardRoutes'));
+router.use('/', require('./e_cardRoutes'));
 
 module.exports = router;
+
+
+
+// const express = require('express');
+// const router = express.Router();
+
+// // Include the Swagger documentation route
+// router.use('/', require('./swagger'));
+
+// // Include the e_card routes
+// router.use('/e_cards', require('./e_cardRoutes'));
+
+// module.exports = router;
